--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,65 @@
 ---
 title: "Introduction"
-description: "Welcome to the new home for your documentation"
+description: "Turn scattered user feedback into actionable insights"
 ---
 
-## Setting up
+## What is Modem?
 
-Get your documentation site up and running in minutes.
+Modem is a developer-focused CRM that helps software teams understand what their users are actually saying. By connecting your communication channels—Discord, Slack, GitHub, Linear, and email—Modem aggregates and analyzes user feedback so you can act on it.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+**The problem:** User feedback is scattered everywhere. Bug reports in Discord, feature requests in Slack, issues in GitHub. Teams waste hours scanning threads, chasing PMs for context, and manually triaging feedback. Critical signals get lost.
 
-## Make it yours
+**The solution:** Modem automatically discovers conversations, extracts topics, and categorizes feedback. You get a single view of what users care about—without the manual work.
 
-Design a docs site that looks great and empowers your users.
-
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
+<CardGroup cols={2}>
+  <Card title="Quickstart" icon="rocket" href="/quickstart">
+    Connect your first integration and see Modem in action.
   </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
+  <Card title="Core Concepts" icon="book" href="/core-concepts">
+    Understand how Modem organizes and analyzes your data.
   </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
+</CardGroup>
 
-## Create beautiful pages
+## Key Capabilities
 
-Everything you need to create world-class documentation.
+<CardGroup cols={2}>
+  <Card title="Multi-Source Ingestion" icon="plug" href="/integrations/overview">
+    Connect Discord, Slack, GitHub, Linear, and email. All your user conversations in one place.
+  </Card>
+  <Card title="AI-Powered Analysis" icon="brain" href="/features/ai-analysis">
+    Automatic topic discovery, conversation segmentation, and feedback categorization.
+  </Card>
+  <Card title="Technical CRM" icon="address-book" href="/features/technical-crm">
+    Unified contact and company profiles across all your data sources.
+  </Card>
+  <Card title="The Modem Agent" icon="robot" href="/features/agent">
+    Ask questions about your users and feedback in natural language.
+  </Card>
+</CardGroup>
 
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
+## Who Uses Modem?
 
-## Need inspiration?
+- **Product Managers** — Get a centralized view of all user feedback without manual triaging
+- **Founders** — Understand customer pain points and priorities in real-time
+- **Engineering Teams** — Access context-rich bug reports with full discussion history
+- **Customer Success** — Track sentiment and engagement patterns across customers
 
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
+## How It Works
+
+<Steps>
+  <Step title="Connect your data sources">
+    Install the Slack app, Discord bot, or GitHub integration. Modem starts ingesting messages and events immediately.
+  </Step>
+  <Step title="AI analyzes your conversations">
+    Modem automatically discovers topics, segments conversations, and categorizes feedback by type (bug reports, feature requests, praise, complaints).
+  </Step>
+  <Step title="Explore and act">
+    Use the dashboard to browse topics, search across sources, and ask the Modem agent questions about your users.
+  </Step>
+</Steps>
+
+## Ready to Get Started?
+
+<Card title="Connect Your First Integration" icon="arrow-right" href="/quickstart">
+  Follow our quickstart guide to see Modem working with your data.
 </Card>
