--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,96 @@
 ---
 title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+description: "Connect your first data source and see Modem in action"
 ---
 
-## Get started in three steps
+Get started with Modem by connecting a data source and exploring your user feedback.
 
-Get your documentation site running locally and make your first customization.
+## Prerequisites
 
-### Step 1: Set up your local environment
+- A Modem account — [sign up here](https://app.modem.dev) if you haven't already
+- Access to at least one communication channel (Slack, Discord, or GitHub)
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+## Step 1: Create Your Organization
 
-### Step 2: Deploy your changes
+After signing up, you'll create an organization. This is your workspace where all your data sources and team members are managed.
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
+<Steps>
+  <Step title="Sign in to Modem">
+    Go to [app.modem.dev](https://app.modem.dev) and sign in with your account.
+  </Step>
+  <Step title="Create an organization">
+    Click **Create Organization** and give it a name (usually your company or product name).
+  </Step>
+  <Step title="Invite your team (optional)">
+    Add team members who should have access to your feedback data.
+  </Step>
+</Steps>
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
+## Step 2: Connect a Data Source
 
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
-
-### Step 3: Go live
-
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
-
-## Next steps
-
-Now that you have your docs running, explore these key features:
+Choose the integration that makes sense for your team. We recommend starting with wherever your users communicate most.
 
 <CardGroup cols={2}>
-
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
-
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
-
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
+  <Card title="Slack" icon="slack" href="/integrations/slack">
+    Best for teams with active customer Slack channels or a community workspace.
+  </Card>
+  <Card title="Discord" icon="discord" href="/integrations/discord">
+    Ideal for developer communities and open-source projects.
+  </Card>
+  <Card title="GitHub" icon="github" href="/integrations/github">
+    Connect issues, discussions, and pull request conversations.
+  </Card>
+  <Card title="Linear" icon="square-check" href="/integrations/linear">
+    Sync issues and project discussions from Linear.
+  </Card>
 </CardGroup>
 
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
+<Tip>
+  You can connect multiple data sources. Modem will correlate participants across platforms when possible.
+</Tip>
+
+## Step 3: Wait for Initial Sync
+
+After connecting an integration, Modem begins ingesting historical data. Depending on the volume:
+
+- **Small channels** (< 1,000 messages): A few minutes
+- **Medium channels** (1,000–10,000 messages): 10–30 minutes
+- **Large channels** (10,000+ messages): Up to a few hours
+
+You'll see data appear in your dashboard as it's processed.
+
+## Step 4: Explore Your Data
+
+Once data starts flowing, explore the key sections of your dashboard:
+
+<AccordionGroup>
+  <Accordion title="Topics" icon="layer-group">
+    AI-discovered conversation themes. Modem automatically groups related messages into topics, even across different channels and platforms.
+  </Accordion>
+  <Accordion title="Participants" icon="users">
+    Users who have interacted across your connected sources. See their feedback history, engagement patterns, and associated companies.
+  </Accordion>
+  <Accordion title="Feedback" icon="comment">
+    Browse user feedback categorized by type: bug reports, feature requests, complaints, praise, and questions.
+  </Accordion>
+  <Accordion title="Agent" icon="robot">
+    Ask the Modem agent questions about your data in natural language. "What are users complaining about this week?" or "Show me feature requests related to authentication."
+  </Accordion>
+</AccordionGroup>
+
+## Next Steps
+
+<CardGroup cols={2}>
+  <Card title="Understand Core Concepts" icon="book" href="/core-concepts">
+    Learn how Modem organizes topics, groups, and participants.
+  </Card>
+  <Card title="Connect More Sources" icon="plug" href="/integrations/overview">
+    Add additional integrations to get a complete picture.
+  </Card>
+  <Card title="Use the Agent" icon="robot" href="/features/agent">
+    Learn how to query your data with natural language.
+  </Card>
+  <Card title="Set Up Automation" icon="clock" href="/features/scheduled-tasks">
+    Configure scheduled digests and automated workflows.
+  </Card>
+</CardGroup>
