Refactor the nav, remove emdashes

--- a/core-concepts.mdx
+++ b/core-concepts.mdx
@@ -19,7 +19,7 @@ Every message is enriched with metadata: author information, timestamps, channel
 **Topics** are AI-discovered conversation themes. When users discuss similar subjects across different channels or time periods, Modem groups these conversations into topics.
 
 <Info>
-  Topics are generated automatically—you don't need to tag or categorize messages manually.
+  Topics are generated automatically. You don't need to tag or categorize messages manually.
 </Info>
 
 A topic might be:
@@ -107,12 +107,12 @@ Data Sources (Slack, Discord, GitHub, Linear, Email)
 
 When a new message arrives:
 
-1. **Ingestion** — The message is captured with full metadata
-2. **Embedding** — AI generates a vector representation of the message content
-3. **Classification** — The message is categorized by feedback type
-4. **Topic Matching** — Semantic search finds related existing topics, or a new topic is created
-5. **Group Assignment** — The message is assigned to a conversation group within the topic
-6. **Participant Linking** — The author is linked to their unified participant profile
+1. **Ingestion.** The message is captured with full metadata.
+2. **Embedding.** AI generates a vector representation of the message content.
+3. **Classification.** The message is categorized by feedback type.
+4. **Topic Matching.** Semantic search finds related existing topics, or a new topic is created.
+5. **Group Assignment.** The message is assigned to a conversation group within the topic.
+6. **Participant Linking.** The author is linked to their unified participant profile.
 
 This processing happens in near real-time, so new messages appear in your dashboard within seconds.
 
