--- a/features/agent.mdx
+++ b/features/agent.mdx
@@ -84,10 +84,10 @@ You can also interact with the Agent directly in Slack:
 
 When you ask a question, the Agent:
 
-1. **Analyzes your query** — Understands what you're asking for
-2. **Searches your data** — Uses semantic search to find relevant topics, messages, and participants
-3. **Accesses tools** — Can query the database, call APIs (GitHub, Linear), and use MCP tools
-4. **Synthesizes a response** — Combines information into a helpful answer
+1. **Analyzes your query.** Understands what you're asking for.
+2. **Searches your data.** Uses semantic search to find relevant topics, messages, and participants.
+3. **Accesses tools.** Can query the database, call APIs (GitHub, Linear), and use MCP tools.
+4. **Synthesizes a response.** Combines information into a helpful answer.
 
 The Agent has access to:
 - All messages and topics in your organization
@@ -209,10 +209,10 @@ With appropriate integrations, the Agent can:
 
 The Agent is powerful but has limitations:
 
-- **Data scope** — Can only access data in your Modem organization
-- **Real-time events** — Very recent messages (seconds old) may not be indexed yet
-- **External data** — Can't access data outside connected integrations
-- **Actions** — Limited to configured capabilities (can't take actions you haven't enabled)
+- **Data scope.** Can only access data in your Modem organization.
+- **Real-time events.** Very recent messages (seconds old) may not be indexed yet.
+- **External data.** Can't access data outside connected integrations.
+- **Actions.** Limited to configured capabilities (can't take actions you haven't enabled).
 
 ## Related
 
