--- a/features/scheduled-tasks.mdx
+++ b/features/scheduled-tasks.mdx
@@ -132,19 +132,19 @@ Narrow what the task analyzes:
 
 Control how results are presented:
 
-- **Summary** — AI-generated overview
-- **List** — Itemized topics or messages
-- **Metrics** — Numbers and charts
-- **Full** — Detailed breakdown with links
+- **Summary.** AI-generated overview.
+- **List.** Itemized topics or messages.
+- **Metrics.** Numbers and charts.
+- **Full.** Detailed breakdown with links.
 
 ### Delivery Options
 
 Where results are sent:
 
-- **Slack** — Post to a channel or DM
-- **Email** — Send to specified addresses
-- **Webhook** — POST to an endpoint
-- **Dashboard** — Store for viewing in Modem
+- **Slack.** Post to a channel or DM.
+- **Email.** Send to specified addresses.
+- **Webhook.** POST to an endpoint.
+- **Dashboard.** Store for viewing in Modem.
 
 ## Managing Tasks
 
@@ -211,7 +211,7 @@ The scheduled task will run this query and deliver results on schedule.
     - Ensure delivery destination is configured
   </Accordion>
   <Accordion title="Results are empty">
-    - Check filters—they may be too restrictive
+    - Check filters, as they may be too restrictive
     - Verify data exists for the time range
     - Ensure integrations are connected and syncing
   </Accordion>
