--- a/features/security-privacy.mdx
+++ b/features/security-privacy.mdx
@@ -22,7 +22,7 @@ Modem is built with security at its core. We maintain SOC 2 Type II compliance a
 
 **Encryption at rest and in transit.** All customer data is encrypted when stored and when transmitted over the internet using industry-standard encryption (TLS 1.2+). This includes messages, user profiles, and any files processed by Modem.
 
-**Access controls.** We enforce the principle of least privilege—employees only access data required for their specific job function. All access to production systems requires multi-factor authentication.
+**Access controls.** We enforce the principle of least privilege: employees only access data required for their specific job function. All access to production systems requires multi-factor authentication.
 
 **Regular security assessments.** We conduct quarterly vulnerability scans on public-facing systems and annual penetration testing by independent security firms.
 
@@ -46,7 +46,7 @@ Modem is built with security at its core. We maintain SOC 2 Type II compliance a
 
 **Retention policy.** We retain customer data for the duration of your subscription plus a reasonable period for account recovery. Upon contract termination or at your request, data is securely deleted.
 
-**Secure deletion.** When data is deleted, we use cryptographic destruction methods—not just soft deletion. This ensures data cannot be recovered.
+**Secure deletion.** When data is deleted, we use cryptographic destruction methods, not just soft deletion. This ensures data cannot be recovered.
 
 **Backups.** Backups are maintained for disaster recovery purposes and follow the same retention and deletion policies as primary data.
 
