--- a/features/team-management.mdx
+++ b/features/team-management.mdx
@@ -146,7 +146,7 @@ If you belong to multiple organizations:
 1. Click the organization switcher in the sidebar
 2. Select the organization you want to access
 
-Each organization is completely separate—data, integrations, and settings don't overlap.
+Each organization is completely separate: data, integrations, and settings don't overlap.
 
 ## Billing
 
