--- a/features/technical-crm.mdx
+++ b/features/technical-crm.mdx
@@ -24,7 +24,7 @@ When a message arrives from a new author, Modem:
 3. Creates or links the identity to a Person record
 4. Stores any email addresses provided by the platform
 
-This happens automatically—every author who sends a message gets a Person record.
+This happens automatically: every author who sends a message gets a Person record.
 
 ### Person Profiles
 
@@ -67,8 +67,8 @@ When Jane sends a message on any platform, it's attributed to the same Person re
 
 After enrichment, persons can have:
 
-- **Ecosystem Tags** — Technologies they work with (React, Kubernetes, Python)
-- **Expertise Tags** — Skills and specializations (Frontend Development, DevOps, API Design)
+- **Ecosystem Tags.** Technologies they work with (React, Kubernetes, Python).
+- **Expertise Tags.** Skills and specializations (Frontend Development, DevOps, API Design).
 
 These help you find the right people to talk to about specific topics.
 
@@ -128,7 +128,7 @@ Jane Smith
 └── StartupXYZ (2019-2022) - Engineer
 ```
 
-This history is preserved when someone changes jobs—you don't lose the context of past relationships.
+This history is preserved when someone changes jobs, so you don't lose the context of past relationships.
 
 ## Enrichment
 
@@ -165,8 +165,8 @@ Enrichment uses AI-powered web search to automatically discover information abou
 
 Each enrichment includes a confidence score (0-1):
 
-- **High confidence (≥0.7)** — Data is reliable
-- **Lower confidence** — May benefit from manual review
+- **High confidence (≥0.7).** Data is reliable.
+- **Lower confidence.** May benefit from manual review.
 
 ## Merging Duplicates
 
@@ -195,9 +195,9 @@ Merges are logged and can be reverted if needed. The merge history shows:
 
 All changes to Person and Company records are automatically tracked:
 
-- **What changed** — Before and after values
-- **Who changed it** — User, system, or AI agent
-- **When** — Timestamp of the change
+- **What changed.** Before and after values.
+- **Who changed it.** User, system, or AI agent.
+- **When.** Timestamp of the change.
 
 This audit trail helps you understand how records evolved over time.
 
