--- a/guides/feedback-categories.mdx
+++ b/guides/feedback-categories.mdx
@@ -58,9 +58,9 @@ Positive feedback, appreciation, or compliments about the product or team.
 
 Modem uses AI to analyze message content and context:
 
-1. **Content Analysis** — The text of the message is analyzed for sentiment, intent, and keywords
-2. **Context Signals** — Channel type, thread context, and conversation history provide additional signals
-3. **Confidence Scoring** — Each classification includes a confidence score
+1. **Content Analysis.** The text of the message is analyzed for sentiment, intent, and keywords.
+2. **Context Signals.** Channel type, thread context, and conversation history provide additional signals.
+3. **Confidence Scoring.** Each classification includes a confidence score.
 
 <Info>
   Classification happens automatically as messages are ingested. There's no manual setup required.
@@ -99,9 +99,9 @@ Categories work alongside topics to give you a complete picture:
 
 AI classification isn't perfect. Some messages may be:
 
-- **Ambiguous** — "This doesn't work the way I expected" could be a bug report or a complaint
-- **Multi-category** — "The export is broken and you really need to add CSV support" contains both a bug and a feature request
-- **Contextual** — Sarcasm or complex context can lead to misclassification
+- **Ambiguous.** "This doesn't work the way I expected" could be a bug report or a complaint.
+- **Multi-category.** "The export is broken and you really need to add CSV support" contains both a bug and a feature request.
+- **Contextual.** Sarcasm or complex context can lead to misclassification.
 
 <Tip>
   When a message contains multiple feedback types, Modem classifies it based on the primary intent. The full message is always available for context.
