--- a/guides/participants.mdx
+++ b/guides/participants.mdx
@@ -19,7 +19,7 @@ When Modem ingests messages, it extracts author information and creates particip
 When a user is active across multiple platforms, Modem can link their identities into a single participant profile.
 
 <Info>
-  Identity linking uses email addresses, usernames, and other signals. It's not always possible to link identities automatically—some users may appear as separate participants on different platforms.
+  Identity linking uses email addresses, usernames, and other signals. It's not always possible to link identities automatically, so some users may appear as separate participants on different platforms.
 </Info>
 
 ### Example
@@ -51,18 +51,18 @@ Each participant profile includes:
 Navigate to **Participants** in your dashboard to see all users across your data sources.
 
 Filter and sort by:
-- **Activity** — Most recently active, most messages, most topics
-- **Feedback type** — Users who report bugs, request features, etc.
-- **Source** — Users from specific platforms
-- **Company** — Users from specific companies
+- **Activity.** Most recently active, most messages, most topics.
+- **Feedback type.** Users who report bugs, request features, etc.
+- **Source.** Users from specific platforms.
+- **Company.** Users from specific companies.
 
 ### Participant Details
 
 Click on a participant to see their full profile:
 
-- **Overview** — Summary of their engagement and feedback patterns
-- **Messages** — Complete history of their messages across sources
-- **Topics** — Topics they've participated in, with their specific contributions
+- **Overview.** Summary of their engagement and feedback patterns.
+- **Messages.** Complete history of their messages across sources.
+- **Topics.** Topics they've participated in, with their specific contributions.
 
 ### Searching for Participants
 
