--- a/guides/topics.mdx
+++ b/guides/topics.mdx
@@ -9,10 +9,10 @@ Topics are AI-discovered conversation themes that group related messages across 
 
 Modem uses a combination of semantic analysis and conversation detection to create topics:
 
-1. **Message Embedding** — Each message is converted into a vector representation that captures its meaning
-2. **Similarity Matching** — New messages are compared against existing topics to find semantic matches
-3. **Conversation Segmentation** — Related messages in sequence are grouped together as a conversation
-4. **Topic Generation** — When a conversation doesn't fit existing topics, a new topic is created
+1. **Message Embedding.** Each message is converted into a vector representation that captures its meaning.
+2. **Similarity Matching.** New messages are compared against existing topics to find semantic matches.
+3. **Conversation Segmentation.** Related messages in sequence are grouped together as a conversation.
+4. **Topic Generation.** When a conversation doesn't fit existing topics, a new topic is created.
 
 <Info>
   Topics are generated automatically. You don't need to tag, label, or categorize messages yourself.
@@ -34,7 +34,7 @@ Each topic includes:
 
 ## Topic Groups
 
-A topic can contain multiple **groups**—distinct conversations that share the same theme but happened at different times or in different contexts.
+A topic can contain multiple **groups**, distinct conversations that share the same theme but happened at different times or in different contexts.
 
 For example, a topic about "API rate limiting" might have:
 
@@ -51,9 +51,9 @@ Groups help you see the evolution of a topic over time.
 Navigate to **Topics** in your dashboard to see all discovered topics. Topics are sorted by recent activity by default.
 
 Use filters to narrow down:
-- **Time range** — Topics with activity in a specific period
-- **Source** — Topics from specific channels or platforms
-- **Feedback type** — Topics containing bug reports, feature requests, etc.
+- **Time range.** Topics with activity in a specific period.
+- **Source.** Topics from specific channels or platforms.
+- **Feedback type.** Topics containing bug reports, feature requests, etc.
 
 ### Searching Topics
 
@@ -78,7 +78,7 @@ Modem assigns a confidence score to each topic based on:
 - Whether the messages form coherent conversations
 - The distinctiveness of the topic from other topics
 
-Higher confidence topics have stronger thematic coherence. Lower confidence topics may need review—the messages might belong to separate topics, or the topic boundaries might need adjustment.
+Higher confidence topics have stronger thematic coherence. Lower confidence topics may need review: the messages might belong to separate topics, or the topic boundaries might need adjustment.
 
 ## Best Practices
 
