--- a/index.mdx
+++ b/index.mdx
@@ -1,15 +1,17 @@
 ---
 title: "Introduction"
-description: "Turn scattered user feedback into actionable insights"
+description: "The agentic product teammate for AI-native software teams"
 ---
 
 ## What is Modem?
 
-Modem is a developer-focused CRM that helps software teams understand what their users are actually saying. By connecting your communication channels—Discord, Slack, GitHub, Linear, and email—Modem aggregates and analyzes user feedback so you can act on it.
+Modem is the agentic product teammate for AI-native software teams. It synthesizes signal from customers, teammates, and stakeholders—building the shared context great PMs carry in their head—then takes on your product busywork: curating tickets, drafting release notes, following up with users, and keeping everyone aligned.
+
+By connecting your communication channels (Discord, Slack, GitHub, Linear, and email), Modem aggregates and analyzes user feedback so you can act on it.
 
 **The problem:** User feedback is scattered everywhere. Bug reports in Discord, feature requests in Slack, issues in GitHub. Teams waste hours scanning threads, chasing PMs for context, and manually triaging feedback. Critical signals get lost.
 
-**The solution:** Modem automatically discovers conversations, extracts topics, and categorizes feedback. You get a single view of what users care about—without the manual work.
+**The solution:** Modem automatically discovers conversations, extracts topics, and categorizes feedback. You get a single view of what users care about, without the manual work.
 
 <CardGroup cols={2}>
   <Card title="Quickstart" icon="rocket" href="/quickstart">
@@ -39,10 +41,10 @@ Modem is a developer-focused CRM that helps software teams understand what their
 
 ## Who Uses Modem?
 
-- **Product Managers** — Get a centralized view of all user feedback without manual triaging
-- **Founders** — Understand customer pain points and priorities in real-time
-- **Engineering Teams** — Access context-rich bug reports with full discussion history
-- **Customer Success** — Track sentiment and engagement patterns across customers
+- **Product Managers** get a centralized view of all user feedback without manual triaging
+- **Founders** understand customer pain points and priorities in real-time
+- **Engineering Teams** access context-rich bug reports with full discussion history
+- **Customer Success** tracks sentiment and engagement patterns across customers
 
 ## How It Works
 
