--- a/integrations/discord.mdx
+++ b/integrations/discord.mdx
@@ -7,11 +7,11 @@ The Discord integration captures messages from your Discord servers, ideal for d
 
 ## What Gets Captured
 
-- **Messages** — All messages in selected channels
-- **Threads** — Forum posts and thread replies
-- **Reactions** — Emoji reactions on messages
-- **User Profiles** — Usernames, display names, and avatars
-- **Server Metadata** — Channel names and categories
+- **Messages.** All messages in selected channels.
+- **Threads.** Forum posts and thread replies.
+- **Reactions.** Emoji reactions on messages.
+- **User Profiles.** Usernames, display names, and avatars.
+- **Server Metadata.** Channel names and categories.
 
 ## Prerequisites
 
@@ -43,9 +43,9 @@ The Discord integration captures messages from your Discord servers, ideal for d
 
 ### Recommended Channels
 
-- `#support` or `#help` — Community support channels
-- `#feedback` or `#suggestions` — Feature requests and ideas
-- `#bugs` or `#bug-reports` — User-reported issues
+- `#support` or `#help`: Community support channels
+- `#feedback` or `#suggestions`: Feature requests and ideas
+- `#bugs` or `#bug-reports`: User-reported issues
 - Forum channels for discussions and Q&A
 
 ### Channels to Avoid
