--- a/integrations/email.mdx
+++ b/integrations/email.mdx
@@ -16,11 +16,11 @@ Modem provides a dedicated inbound email address for your organization. Emails s
 
 ## What Gets Captured
 
-- **Email content** — Subject line and body text
-- **Sender information** — Name and email address
-- **Thread context** — Reply chains are tracked as conversations
-- **Timestamps** — When emails were sent
-- **Attachments** — Referenced but not stored (links preserved if accessible)
+- **Email content.** Subject line and body text.
+- **Sender information.** Name and email address.
+- **Thread context.** Reply chains are tracked as conversations.
+- **Timestamps.** When emails were sent.
+- **Attachments.** Referenced but not stored (links preserved if accessible).
 
 ## Setup
 
