--- a/integrations/github.mdx
+++ b/integrations/github.mdx
@@ -7,12 +7,12 @@ The GitHub integration captures feedback from your repositories, including issue
 
 ## What Gets Captured
 
-- **Issues** — Issue titles, descriptions, and comments
-- **Pull Requests** — PR descriptions, review comments, and discussion
-- **Discussions** — GitHub Discussions posts and replies
-- **Reactions** — Emoji reactions on issues and comments
-- **User Profiles** — GitHub usernames and avatars
-- **Labels and Metadata** — Issue labels, states, and assignees
+- **Issues.** Issue titles, descriptions, and comments.
+- **Pull Requests.** PR descriptions, review comments, and discussion.
+- **Discussions.** GitHub Discussions posts and replies.
+- **Reactions.** Emoji reactions on issues and comments.
+- **User Profiles.** GitHub usernames and avatars.
+- **Labels and Metadata.** Issue labels, states, and assignees.
 
 ## Prerequisites
 
@@ -27,8 +27,8 @@ The GitHub integration captures feedback from your repositories, including issue
   </Step>
   <Step title="Install the GitHub App">
     You'll be redirected to GitHub to install the Modem GitHub App. Choose:
-    - **All repositories** — Modem can access all current and future repositories
-    - **Selected repositories** — Choose specific repositories to connect
+    - **All repositories.** Modem can access all current and future repositories.
+    - **Selected repositories.** Choose specific repositories to connect.
   </Step>
   <Step title="Authorize access">
     Review the permissions and click **Install & Authorize**.
