--- a/integrations/linear.mdx
+++ b/integrations/linear.mdx
@@ -7,11 +7,11 @@ The Linear integration syncs issues and comments from your Linear workspace, hel
 
 ## What Gets Captured
 
-- **Issues** — Issue titles, descriptions, and status
-- **Comments** — Discussion on issues
-- **Project Context** — Project and team associations
-- **User Profiles** — Linear user information
-- **Metadata** — Labels, priorities, and state changes
+- **Issues.** Issue titles, descriptions, and status.
+- **Comments.** Discussion on issues.
+- **Project Context.** Project and team associations.
+- **User Profiles.** Linear user information.
+- **Metadata.** Labels, priorities, and state changes.
 
 ## Prerequisites
 
