--- a/integrations/mcp.mdx
+++ b/integrations/mcp.mdx
@@ -21,10 +21,10 @@ The Model Context Protocol (MCP) is an open standard that allows AI assistants t
 
 Modem's MCP server works with any MCP-compatible client:
 
-- **Claude Desktop** — Anthropic's desktop app
-- **Cursor** — AI-powered code editor
-- **Continue** — Open-source AI coding assistant
-- **Other MCP clients** — Any tool implementing the MCP specification
+- **Claude Desktop.** Anthropic's desktop app.
+- **Cursor.** AI-powered code editor.
+- **Continue.** Open-source AI coding assistant.
+- **Other MCP clients.** Any tool implementing the MCP specification.
 
 ## Setup
 
@@ -171,9 +171,9 @@ The MCP token inherits your user permissions:
 
 ### Token Management
 
-- **Regenerate** — If compromised, regenerate the token in Settings
-- **Revoke** — Delete the token to disable MCP access
-- **Multiple tokens** — Create separate tokens for different tools if needed
+- **Regenerate.** If compromised, regenerate the token in Settings.
+- **Revoke.** Delete the token to disable MCP access.
+- **Multiple tokens.** Create separate tokens for different tools if needed.
 
 ## Troubleshooting
 
@@ -198,8 +198,8 @@ The MCP token inherits your user permissions:
 
 ## Resources
 
-- [MCP Specification](https://modelcontextprotocol.io) — Official protocol documentation
-- [Claude Desktop MCP Guide](https://docs.anthropic.com/claude/docs/mcp) — Anthropic's MCP documentation
+- [MCP Specification](https://modelcontextprotocol.io): Official protocol documentation
+- [Claude Desktop MCP Guide](https://docs.anthropic.com/claude/docs/mcp): Anthropic's MCP documentation
 
 ## Related
 
