--- a/integrations/overview.mdx
+++ b/integrations/overview.mdx
@@ -42,10 +42,10 @@ Your Tools (Slack, Discord, GitHub, etc.)
     Your Modem Dashboard
 ```
 
-1. **Connection** — You authorize Modem to access your data source via OAuth or API keys
-2. **Historical Sync** — Modem fetches historical messages and events (varies by integration)
-3. **Real-time Updates** — New messages and events are captured as they happen
-4. **Processing** — Messages are analyzed, categorized, and organized into topics
+1. **Connection.** You authorize Modem to access your data source via OAuth or API keys.
+2. **Historical Sync.** Modem fetches historical messages and events (varies by integration).
+3. **Real-time Updates.** New messages and events are captured as they happen.
+4. **Processing.** Messages are analyzed, categorized, and organized into topics.
 
 ### What Gets Captured
 
@@ -56,8 +56,8 @@ Each integration captures different types of data:
 | Slack | Yes | Yes | Yes | Yes |
 | Discord | Yes | Yes | Yes | Yes |
 | GitHub | Yes (comments) | Yes | Yes | Yes (issues, PRs) |
-| Linear | Yes (comments) | — | — | Yes (issues) |
-| Email | Yes | — | Yes (replies) | — |
+| Linear | Yes (comments) | No | No | Yes (issues) |
+| Email | Yes | No | Yes (replies) | No |
 
 ## Choosing What to Connect
 
@@ -65,9 +65,9 @@ Each integration captures different types of data:
 
 Not all channels contain useful feedback. Prioritize:
 
-- **Support channels** — Where users ask questions and report issues
-- **Community channels** — Where users discuss your product
-- **Feedback channels** — Dedicated spaces for suggestions and requests
+- **Support channels.** Where users ask questions and report issues.
+- **Community channels.** Where users discuss your product.
+- **Feedback channels.** Dedicated spaces for suggestions and requests.
 
 Avoid:
 - Internal team channels (unless you want to analyze internal feedback)
@@ -78,9 +78,9 @@ Avoid:
 
 Most integrations let you select specific channels to monitor rather than capturing everything:
 
-- **Slack** — Choose specific channels during setup
-- **Discord** — Select channels to monitor
-- **GitHub** — Choose repositories to sync
+- **Slack.** Choose specific channels during setup.
+- **Discord.** Select channels to monitor.
+- **GitHub.** Choose repositories to sync.
 
 <Tip>
   Start with a few high-value channels and expand later. It's easier to add channels than to clean up data from noisy sources.
