--- a/integrations/slack.mdx
+++ b/integrations/slack.mdx
@@ -7,11 +7,11 @@ The Slack integration captures messages from your Slack workspaces, including su
 
 ## What Gets Captured
 
-- **Messages** — All messages in selected channels
-- **Threads** — Full thread conversations with replies
-- **Reactions** — Emoji reactions on messages
-- **User Profiles** — Names, avatars, and email addresses (when available)
-- **Channel Metadata** — Channel names, descriptions, and types
+- **Messages.** All messages in selected channels.
+- **Threads.** Full thread conversations with replies.
+- **Reactions.** Emoji reactions on messages.
+- **User Profiles.** Names, avatars, and email addresses (when available).
+- **Channel Metadata.** Channel names, descriptions, and types.
 
 ## Prerequisites
 
@@ -46,9 +46,9 @@ The Slack integration captures messages from your Slack workspaces, including su
 
 ### Recommended Channels
 
-- `#support` or `#help` — Customer support requests
-- `#feedback` or `#suggestions` — Feature requests and ideas
-- `#bugs` or `#issues` — Bug reports
+- `#support` or `#help`: Customer support requests
+- `#feedback` or `#suggestions`: Feature requests and ideas
+- `#bugs` or `#issues`: Bug reports
 - Community channels where users discuss your product
 
 ### Channels to Avoid
@@ -65,8 +65,8 @@ The Slack integration captures messages from your Slack workspaces, including su
 
 When you first connect Slack, Modem syncs historical messages:
 
-- **Public channels** — Up to 90 days of history (Slack API limits)
-- **Private channels** — Up to 90 days (requires appropriate access)
+- **Public channels.** Up to 90 days of history (Slack API limits).
+- **Private channels.** Up to 90 days (requires appropriate access).
 
 After initial sync, new messages are captured in real-time.
 
