--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -7,7 +7,7 @@ Get started with Modem by connecting a data source and exploring your user feedb
 
 ## Prerequisites
 
-- A Modem account — [sign up here](https://app.modem.dev) if you haven't already
+- A Modem account ([sign up here](https://app.modem.dev) if you haven't already)
 - Access to at least one communication channel (Slack, Discord, or GitHub)
 
 ## Step 1: Create Your Organization
@@ -54,7 +54,7 @@ Choose the integration that makes sense for your team. We recommend starting wit
 After connecting an integration, Modem begins ingesting historical data. Depending on the volume:
 
 - **Small channels** (< 1,000 messages): A few minutes
-- **Medium channels** (1,000–10,000 messages): 10–30 minutes
+- **Medium channels** (1,000-10,000 messages): 10-30 minutes
 - **Large channels** (10,000+ messages): Up to a few hours
 
 You'll see data appear in your dashboard as it's processed.
