--- a/use-cases.mdx
+++ b/use-cases.mdx
@@ -13,9 +13,9 @@ Modem helps teams turn scattered feedback into action. Here are three ways custo
 
 ### How It Works
 
-1. **Connect your feedback sources** — Modem ingests conversations from Slack, Discord, GitHub, and email
-2. **Ship your feature** — When you close a Linear issue or merge a PR, Modem knows what was delivered
-3. **Generate personalized notes** — Ask the Modem Agent: "Which customers asked for [feature]? Draft release notes highlighting how this addresses their specific requests."
+1. **Connect your feedback sources.** Modem ingests conversations from Slack, Discord, GitHub, and email.
+2. **Ship your feature.** When you close a Linear issue or merge a PR, Modem knows what was delivered.
+3. **Generate personalized notes.** Ask the Modem Agent: "Which customers asked for [feature]? Draft release notes highlighting how this addresses their specific requests."
 
 ### Example
 
@@ -46,9 +46,9 @@ Modem helps teams turn scattered feedback into action. Here are three ways custo
 
 ### How It Works
 
-1. **Connect Discord** — Modem captures all messages from your community channels
-2. **AI categorizes feedback** — Each message is classified as a bug report, feature request, question, complaint, or praise
-3. **Schedule a digest** — Set up a weekly task that summarizes feedback and emails it to your team
+1. **Connect Discord.** Modem captures all messages from your community channels.
+2. **AI categorizes feedback.** Each message is classified as a bug report, feature request, question, complaint, or praise.
+3. **Schedule a digest.** Set up a weekly task that summarizes feedback and emails it to your team.
 
 ### Example Digest
 
@@ -94,37 +94,37 @@ In Modem, create a scheduled task:
 
 ## Closing the Loop on Feature Requests
 
-**Problem:** A user requests a feature in Slack. Months later, you ship it—but forget to tell them. They never know their feedback mattered.
+**Problem:** A user requests a feature in Slack. Months later, you ship it but forget to tell them. They never know their feedback mattered.
 
 **Solution:** Automatically notify users when their requested feature ships by connecting Modem to Linear.
 
 ### How It Works
 
-1. **User requests a feature** — In Slack, Discord, or any connected source
-2. **You create a Linear issue** — Link it to the feedback or let Modem track the connection
-3. **You ship and close the issue** — When the Linear ticket moves to "Done"
-4. **Modem notifies the requester** — Automatically sends a message letting them know
+1. **User requests a feature** in Slack, Discord, or any connected source.
+2. **You create a Linear issue** and link it to the feedback, or let Modem track the connection.
+3. **You ship and close the issue.** The Linear ticket moves to "Done."
+4. **Modem notifies the requester** automatically, letting them know.
 
 ### Example Flow
 
-**January 15 — User requests feature:**
+**January 15: User requests feature**
 > @support Can we get keyboard shortcuts? Would save me so much time.
 
-**January 16 — You create Linear issue:**
-> "Add keyboard shortcuts" — linked to Slack conversation
+**January 16: You create Linear issue**
+> "Add keyboard shortcuts" (linked to Slack conversation)
 
-**March 10 — You ship and close the issue**
+**March 10: You ship and close the issue**
 
-**March 10 — Modem sends notification:**
+**March 10: Modem sends notification**
 > Hey! Remember when you asked about keyboard shortcuts back in January?
 > We just shipped it! Check out the new shortcuts in Settings → Keyboard.
-> Thanks for the suggestion—this one's for you. 🎉
+> Thanks for the suggestion, this one's for you. 🎉
 
 ### Setting It Up
 
-1. **Connect Linear** — Modem syncs your issues and their status
-2. **Enable close-the-loop automation** — In scheduled tasks, create a workflow triggered by Linear issue completion
-3. **Customize the message** — Personalize the notification template
+1. **Connect Linear.** Modem syncs your issues and their status.
+2. **Enable close-the-loop automation.** In scheduled tasks, create a workflow triggered by Linear issue completion.
+3. **Customize the message.** Personalize the notification template.
 
 ### Why It Matters
 
