Rename sidenav headers

--- a/features/team-management.mdx
+++ b/features/team-management.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Team & Organization Management"
+title: "Team Management"
 description: "Manage your team, roles, and organization settings"
 ---
 
